@@ -55,7 +55,7 @@ setAs("sts", "stsNC", function(from) {
                map=from@map,
                control=from@control,
                epochAsDate=from@epochAsDate,
-               multinomialTS=from@epochAsDate,
+               multinomialTS=from@multinomialTS,
                reportingTriangle=NULL,
                predPMF=list(),
                pi=array(NA,dim=c(nrow(from@observed),ncol(from@observed),2)),
@@ -70,4 +70,54 @@ setAs("sts", "stsNC", function(from) {
 #Methods
 ######################################################################
 setMethod("initialize", "stsNC", init.stsNC)
+
+######################################################################
+# Create own plotting method for the stsNC class, which starts by
+# using the inherited method, but with some additional plotting
+# put into the .hookFunSpecial function.
+#
+# Parameters:
+#  same as the for the plot method of sts objects.
+######################################################################
+
+setMethod(f="plot", signature=signature(x="stsNC", y="missing"),
+          function (x, type = observed ~ time | unit, ...) {
+
+              #Hook function specifically for nowcasting objects.
+              nowcastPlotHook <- function() {
+                  #Define some colors for the plotting as well as some plot symbols
+                  color <- surveillance.options("colors")
+                  pchList   <- c(nowSymbol=10)
+                  
+                  #Prolong line of last observation (this should go into the plot function
+                  idx <- nrow(x) - which.max(!is.na(rev(upperbound(x)))) + 1
+                  #Continue line from plot - use same style as stsplot_time1
+                  lines( idx+c(-0.5,0.5), rep(upperbound(x)[idx,],2),col=col[3],lwd=lwd[3],lty=lty[3])
+
+                  #Add the prediction intervals as bars (where not NA). Conf level
+                  #is found in x@control$alpha
+                  idxt <- which(apply(x@pi[1:nrow(x),1,],1,function(x) all(!is.na(x))))
+                  for (i in idxt) {
+                      lines( i+c(-0.3,0.3), rep(x@pi[i,,1],2),lty=1,col=color["piBars"])
+                      lines( i+c(-0.3,0.3), rep(x@pi[i,,2],2),lty=1,col=color["piBars"])
+                      lines( rep(i,each=2), x@pi[i,,],lty=2,col=color["piBars"])
+                  }
+
+                  #Extract now date and date range of the plotting
+                  startDate <- epoch(x)[1]
+
+                  #Add "now" symbol on x-axis
+                  points(x@control$now-startDate+1,0,pch=pchList["nowSymbol"],col=color["nowSymbol"],cex=1.5)
+                  #Add this to the legend
+                  if (!is.null(legend.opts)) {
+                      legend(x="topright",c("Now"),pch=pchList["nowSymbol"],col=color["nowSymbol"],bg="white")
+                  }
+                  
+                  return(invisible())
+              }
+
+              invisible(callNextMethod(x=x,y=y,.hookFuncInheritance=nowcastPlotHook,...))
+          })
+
+
 
