@@ -1,6 +1,7 @@
 \name{stsplot}
 \docType{methods}
 \alias{plot,sts,missing-method}
+\alias{plot,stsNC,missing-method}
 \alias{stsplot} % for convenience
 
 \title{Plot-Methods for Surveillance Time-Series Objects}
