@@ -34,7 +34,8 @@ stsplot_time1(x, k=1, ylim=NULL,
               outbreak.symbol=list(pch=3, col=3, cex=1, lwd=1),
               alarm.symbol=list(pch=24, col=2, cex=1, lwd=1),
               legend.opts=list(x="top",legend=NULL,lty=NULL,pch=NULL,col=NULL),
-              dx.upperbound=0L, hookFunc=function(){}, ...)
+              dx.upperbound=0L, hookFunc=function(){},
+              .hookFuncInheritance=function() {}, ...)
 
 stsplot_alarm(x, lvl=rep(1,nrow(x)), ylim=NULL,
               xaxis.tickFreq=list("\%Q"=atChange),
@@ -119,6 +120,8 @@ stsplot_alarm(x, lvl=rep(1,nrow(x)), ylim=NULL,
   \item{hookFunc}{a function that is called after all the basic plotting
     has be done, i.e., it is not possible to control formatting with
     this function. See Examples.}
+  \item{.hookFuncInheritance}{a function which is altered by sub-classes
+    plot method. Do not alter this function manually.}
   \item{...}{further arguments for the function \code{matplot}. If
     e.g. \code{xlab} or \code{main} are provided they overwrite the
     default values.} 
